RESOLVED FIXED 120620
REGRESSION(r154967): http appcache tests crashing on WK1
https://bugs.webkit.org/show_bug.cgi?id=120620
Summary REGRESSION(r154967): http appcache tests crashing on WK1
Zoltan Arvai
Reported 2013-09-03 01:17:55 PDT
Created attachment 210333 [details] GTK debug resource-redirect-2-crash-log Some http appcache tests are crashing on WK1 after the patch. GTK: http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20WK1/r154967%20%283938%29/results.html http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r154967%20%2840352%29/results.html http/tests/appcache/resource-redirect-2.html http/tests/appcache/foreign-iframe-main.html http/tests/appcache/abort-cache-ondownloading.html http/tests/appcache/abort-cache-ondownloading-resource-404.html http/tests/appcache/navigating-away-while-cache-attempt-in-progress.html http/tests/appcache/resource-redirect.html http/tests/appcache/abort-cache-onprogress.html http/tests/appcache/404-resource.html Detailed debug crash log attached. EFL: http://build.webkit.org/results/EFL%20Linux%2064-bit%20Release%20WK1/r154967%20%281626%29/results.html http/tests/appcache/abort-cache-onprogress.html http/tests/appcache/resource-redirect-2.html http/tests/appcache/foreign-iframe-main.html http/tests/appcache/abort-cache-ondownloading.html http/tests/appcache/abort-cache-ondownloading-resource-404.html http/tests/appcache/navigating-away-while-cache-attempt-in-progress.html http/tests/appcache/resource-redirect.html http/tests/appcache/interrupted-update.html http/tests/appcache/404-resource.html http/tests/inspector/appcache/appcache-manifest-with-non-existing-file.html http/tests/appcache/abort-cache-onprogress.html crash log for DumpRenderTree (pid 16096): STDOUT: CONSOLE MESSAGE: Application Cache download process was aborted. STDERR: 1 0x7fed2cceefa8 STDERR: 2 0x7fed28170bd0 STDERR: 3 0x7fed2b1da299 WebCore::ApplicationCacheGroup::checkIfLoadIsComplete() STDERR: 4 0x7fed2b1dab79 WebCore::ApplicationCacheGroup::finishedLoadingMainResource(WebCore::DocumentLoader*) STDERR: 5 0x7fed2b1db035 WebCore::ApplicationCacheGroup::deliverDelayedMainResources() STDERR: 6 0x7fed2b1db5f1 WebCore::ApplicationCacheGroup::abort(WebCore::Frame*) STDERR: 7 0x7fed2bbad599 WebCore::jsDOMApplicationCachePrototypeFunctionAbort(JSC::ExecState*) STDERR: 8 0x7fecdbcd40e5 Qt: http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r154967%20%2830328%29/results.html http/tests/appcache/abort-cache-onprogress.html http/tests/appcache/resource-redirect-2.html http/tests/appcache/idempotent-update.html http/tests/appcache/abort-cache-ondownloading-resource-404.html http/tests/appcache/non-html.xhtml http/tests/appcache/resource-redirect.html http/tests/appcache/abort-cache-ondownloading.html http/tests/appcache/interrupted-update.html http/tests/appcache/404-resource.html http/tests/inspector/appcache/appcache-manifest-with-non-existing-file.html abort-cache-onprogress-crash-log.txt crash log for DumpRenderTree (pid 19329): STDOUT: <empty> STDERR: ASSERTION FAILED: m_associatedDocumentLoaders.isEmpty() STDERR: /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/loader/appcache/ApplicationCacheGroup.cpp(392) : void WebCore::ApplicationCacheGroup::cacheDestroyed(WebCore::ApplicationCache*) STDERR: 1 0x7f9b7a3d7c1b /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(WTFCrash+0x1e) [0x7f9b7a3d7c1b] STDERR: 2 0x7f9b7925672a /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xc5b72a) [0x7f9b7925672a] ...
Attachments
GTK debug resource-redirect-2-crash-log (14.66 KB, text/plain)
2013-09-03 01:17 PDT, Zoltan Arvai
no flags
Qt abort-cache-onprogress-backtrace (8.77 KB, text/plain)
2013-09-03 01:25 PDT, Zoltan Arvai
no flags
Lion abort-cache-onprogress-crash-log (44.36 KB, text/plain)
2013-09-03 01:30 PDT, Zoltan Arvai
no flags
Patch (1.96 KB, patch)
2013-09-03 03:12 PDT, Zan Dobersek
no flags
Zoltan Arvai
Comment 1 2013-09-03 01:25:49 PDT
Created attachment 210334 [details] Qt abort-cache-onprogress-backtrace Backtrace for http/tests/appcache/abort-cache-onprogress.html test added for Qt WK1.
Zoltan Arvai
Comment 2 2013-09-03 01:30:14 PDT
Zan Dobersek
Comment 3 2013-09-03 03:12:48 PDT
Andreas Kling
Comment 4 2013-09-03 06:49:12 PDT
Comment on attachment 210344 [details] Patch r=me since it fixes the crash.
Zan Dobersek
Comment 5 2013-09-03 07:19:52 PDT
Comment on attachment 210344 [details] Patch Clearing flags on attachment: 210344 Committed r154981: <http://trac.webkit.org/changeset/154981>
Zan Dobersek
Comment 6 2013-09-03 07:19:58 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7 2013-09-03 08:55:52 PDT
Thanks for the fix. Sorry I broke this!
Note You need to log in before you can comment on or make changes to this bug.